golden/error/lex_number_end_decimal_point.test
123.

# output:
 --> stdin:1:3
  |
1 | 123.
  |    ^
Error: Expected a digit to follow the decimal point in this number.
